--- a/OnesieMobile/View/MainPage.xaml
+++ b/OnesieMobile/View/MainPage.xaml
@@ -13,7 +13,7 @@
         RowSpacing="0">
         <StackLayout  Grid.Row="0">
             <Label HorizontalOptions="End" Margin="10,0,10,0"  
-               Text="{Binding CurrentDateTime}"/>
+               Text="{Binding LastActualized}"/>
         </StackLayout>
 
         <CollectionView x:Name="ActivityCollection"
