--- a/OnesieMobile/View/MainPage.xaml
+++ b/OnesieMobile/View/MainPage.xaml
@@ -9,13 +9,16 @@
     Title="{Binding Title}">
     <Grid x:Name="MainLayout"
         ColumnDefinitions="*"
-        RowDefinitions="60,50,50,*"
+        RowDefinitions="60,30,40,*"
         RowSpacing="0">
         <StackLayout  Grid.Row="0">
             <Label HorizontalOptions="End" Margin="10,0,10,0"  
                Text="{Binding LastActualized}"/>
         </StackLayout>
-
+        <Button Grid.Row="1" Text="Crash IOS" WidthRequest="120" HeightRequest="20" 
+                Padding="0" FontSize="12" x:Name="CrashButton" Pressed="CrashButton_Pressed"/>
+        <Button Grid.Row="2" Text="Don't crash IOS" WidthRequest="120" HeightRequest="20" 
+                Padding="0" FontSize="12" x:Name="NoCrashButton" Pressed="NoCrashButton_Pressed" />
         <CollectionView x:Name="ActivityCollection"
             Grid.Row="3"    ItemsUpdatingScrollMode="KeepItemsInView"
                 ItemsSource="{Binding ActivityEntities}"
